--- a/tsconfig.extend.json
+++ b/tsconfig.extend.json
@@ -7,7 +7,9 @@
       "@root": ["./"],
       "@root/*": ["./*"],
       "@components": ["./components"],
-      "@components/*": ["./components/*"]
+      "@components/*": ["./components/*"],
+      "@pages": ["./pages"],
+      "@pages/*": ["./pages/*"]
     }
   }
 }
