--- a/tsconfig.extend.json
+++ b/tsconfig.extend.json
@@ -5,8 +5,10 @@
       "@App": ["./App.tsx"],
 
       "@assets/*": ["./assets/*"],
+      "@common/*": ["./common/*"],
       "@components/*": ["./components/*"],
-      "@pages/*": ["./pages/*"]
+      "@pages/*": ["./pages/*"],
+      "@styles/*": ["./lib/styles/*"]
     }
   }
 }
