--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-table": "^7.7.2",
     "@types/styled-components": "^5.1.11",
     "antd": "^4.16.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.1.2",
