--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-table": "^7.7.8",
     "@types/styled-components": "^5.1.15",
     "antd": "^4.17.1",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
