--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "prettier": "2.4.1"
   }
 }
